Solved text overflow issue
Issue of long city names (i.e. Manchester) overflowing solved. Not the prettiest solution, still needs some revision

--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,8 @@ h2 {
   color: #231816;
   font-weight: 500;
   margin-bottom: 0;
+  overflow: auto;
+  white-space: nowrap;
 }
 h3 {
   color: #bababa;
